# django-admin-test-proj

./: .env_db_example  .env_exaple  Dockerfile  README.md  docker-compose.yml  docker-compose_prod.yml  makefile  pyproject.toml
config/: settings.py  urls.py
nginx/: nginx.conf
world/: admin.py  models.py
world/migrations/: 0001_initial.py
